--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -7,11 +7,10 @@
   <script src="/vendor.js"></script>
   <script src="/app.js"></script>
   <script>require('initialize');</script>
+  <link href="https://fonts.googleapis.com/css?family=Muli:300,400,900" rel="stylesheet">
 </head>
 <body>
   <div class="brunch">
-    <a href="http://brunch.io"><img src="http://brunch.io/images/logo.png" alt="Brunch"></a>
-    <p>Bon Appétit.</p>
     <div id="app"></div>
   </div>
 </body>
